# ICM20948_ROS_Publisher_Py

./: CMakeLists.txt  package.xml  qwiic_icm20948.py  readme.md
Qwiic_I2C_Py/qwiic_i2c/: linux_i2c.py
scripts/: ros_imu_publisher.py
src/: ros_imu_publisher.py
